[package]
name = "aggligator-transport-kcp"
version = "0.1.0"
description = "Aggligator transport: KCP"
categories = ["asynchronous", "network-programming"]
keywords = ["aggligator", "aggligator-transport", "kcp"]
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
aggligator = { path = "../aggligator" }
tokio_kcp = "0.9.8"
tokio = { workspace = true, features = ["net", "io-util", "time"] }
futures = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.44", features = ["full"] }
tracing-subscriber = "0.3"
