[package]
name = "aggligator-transport-kcp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45", features = ["full"] }
tokio_kcp = "=0.9.8"
aggligator = { path = "../aggligator" }
network-interface = "2"
anyhow = "1"
tracing = "0.1"
async-trait = "0.1"
futures = "0.3"

[lib]
name = "aggligator_transport_kcp"
path = "src/lib.rs"
