[package]
name = "aggligator-transport-udp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "UDP transport implementation for Aggligator unordered aggregation"
keywords = ["network", "aggregation", "udp", "transport", "async"]
categories = ["network-programming", "asynchronous"]

[dependencies]
aggligator = { path = "../aggligator" }
aggligator-transport-tcp = { path = "../aggligator-transport-tcp" }
async-trait.workspace = true
bincode.workspace = true
bytes.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["net", "time", "sync", "rt", "macros"] }
tokio-util.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "test-util"] }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
test-log.workspace = true

[lib]
name = "aggligator_transport_udp"
path = "src/lib.rs"
